example/error/403.wxml
<mt-error
    type="403"
    icon="/example/error/images/403.png"
    btnEvent="goBack"></mt-error>